--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="assets/css/screen.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/slick-1.6.0/slick/slick.css">
-    <link href="assets/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/slick-1.6.0/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="assets/slick-1.6.0/slick/slick.css">
+    <link href="assets/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/slick-1.6.0/slick/slick-theme.css"/>
     <title>Document</title>
 </head>
 <body>
@@ -103,7 +103,7 @@
 </footer>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="assets/css/slick-1.6.0/slick/slick.min.js"></script>
+<script type="text/javascript" src="assets/slick-1.6.0/slick/slick.min.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
